# keybee

./: Cargo.toml  README.md  README.tpl  example-bindings.yaml
.github/workflows/: ci.yml
src/: lib.rs  session.rs  state.rs
src/actions/: clamped.rs  mod.rs
src/bindings/: binding.rs  mod.rs
src/buttons/: macros.rs  mod.rs  sdl2.rs  sdl3.rs
src/event/: gilrs.rs  mod.rs  sdl2.rs  sdl3.rs  winit.rs
src/session/: bindings_cache.rs  mod.rs
