[package]
name = "keybee"
description = "Semantic input library for games"
version = "0.0.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
readme = "README.md"
homepage = "https://github.com/LPGhatguy/keybee"
repository = "https://github.com/LPGhatguy/keybee"
documentation = "https://docs.rs/keybee"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
serde = { version = "1.0.136", features = ["derive"] }
parking_lot = "0.11.2"

winit = { version = "0.27.3", optional = true }
gilrs = { version = "0.8.1", optional = true }
