[package]
name = "keybee"
description = "Semantic input library for games"
version = "0.0.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
readme = "README.md"
homepage = "https://github.com/LPGhatguy/keybee"
repository = "https://github.com/LPGhatguy/keybee"
documentation = "https://docs.rs/keybee"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
parking_lot = "0.12.1"

winit = { version = "0.28.1", optional = true }
gilrs = { version = "0.10.1", optional = true }
