[package]
name = "keybee"
description = "Semantic input library for games"
version = "0.0.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
readme = "README.md"
homepage = "https://github.com/LPGhatguy/keybee"
repository = "https://github.com/LPGhatguy/keybee"
documentation = "https://docs.rs/keybee"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
parking_lot = "0.12.1"

gilrs = { version = "0.11.0", optional = true }
sdl2 = { version = "0.37.0", optional = true }
winit = { version = "0.30.5", optional = true }
